--- a/src/index.css
+++ b/src/index.css
@@ -3,43 +3,48 @@
 /* تم لایت */
 html.is-light {
   background-color: #ffffff;
-  color: #000000;
+  color: #4e4e4e;
 }
 
 /* تم دارک */
 html.is-dark {
-  background-color: #121212;
-  color: #f5f5f5;
+  background-color: #000000;
+  color: #d0d0d0;
 }
 
 /* کارت‌ها */
 .card {
+  max-width: 300px;
+  margin: 15px auto;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 html.is-light .card {
-  background-color: #f8f9fa;
-  color: #333333;
+  background-color: #ffffff;
+  color: #4e4e4e;
 }
 
 html.is-dark .card {
   background-color: #1e1e1e;
-  color: #f5f5f5;
+  color: #d0d0d0;
 }
 
-/* نوبار */
-.navbar {
-  transition: background-color 0.3s ease, color 0.3s ease;
+               
+
+/* هدر کارت */
+.card-header {
+  background-color: #f5f5f5;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  font-weight: bold;
+  text-align: center;
 }
 
-html.is-light .navbar {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-html.is-dark .navbar {
-  background-color: #1a1a1a;
-  color: #f5f5f5;
+html.is-dark .card-header {
+  background-color: #333;
+  color: #ddd;
 }
 
 /* دکمه‌ها */
@@ -48,28 +53,14 @@ html.is-dark .navbar {
 }
 
 .button.is-light {
-  background-color: #ffffff;
-  color: #000000;
+  background-color: transparent;
+  color: inherit;
 }
 
-.button.is-dark {
-  background-color: #444444;
-  color: #ffffff;
+.button.is-light:hover {
+  background-color: #ddd;
 }
 
-
-html.is-light .custom-background {
-  background-color: #f0f0f0; 
-  color: #333333;
-}
-
-html.is-dark .custom-background {
-  background-color: #1e1e1e; 
-  color: #ffffff;
-}
-
-.custom-background {
-  padding: 20px;
-  border-radius: 10px; 
-  transition: background-color 0.3s ease, color 0.3s ease;
+html.is-dark .button.is-light:hover {
+  background-color: #444;
 }
