--- a/src/index.css
+++ b/src/index.css
@@ -1,66 +1,39 @@
 @import 'bulma/css/bulma.css';
 
-/* تم لایت */
 html.is-light {
   background-color: #ffffff;
-  color: #4e4e4e;
+  color: #000000;
 }
 
-/* تم دارک */
-html.is-dark {
+html.is-dark{
   background-color: #000000;
-  color: #d0d0d0;
+  color: #ffffff;
 }
 
-/* کارت‌ها */
-.card {
-  max-width: 300px;
-  margin: 15px auto;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s ease, color 0.3s ease;
+.is-light .theme-bg{
+  color: #b3b3b3;
 }
 
-html.is-light .card {
-  background-color: #ffffff;
+
+.is-dark .theme-bg{
+  color: #7c7c7c;
+}
+
+
+.is-light .theme-text{
   color: #4e4e4e;
 }
 
-html.is-dark .card {
-  background-color: #1e1e1e;
-  color: #d0d0d0;
+
+.is-dark .theme-text{
+  color: #e2e2e2;
 }
 
-               
-
-/* هدر کارت */
-.card-header {
-  background-color: #f5f5f5;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  font-weight: bold;
-  text-align: center;
+.opacity-10{
+  background-color: inherit;
+  opacity: 0.1;
 }
 
-html.is-dark .card-header {
-  background-color: #333;
-  color: #ddd;
-}
-
-/* دکمه‌ها */
-.button {
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.button.is-light {
-  background-color: transparent;
-  color: inherit;
-}
-
-.button.is-light:hover {
-  background-color: #ddd;
-}
-
-html.is-dark .button.is-light:hover {
-  background-color: #444;
+.hover-opacity:hover {
+  opacity: 0.75;
 }
